@@ -1,2 +1,6 @@
 # jlink-playground
 Playground project of minimized packaging of spring boot application
+
+## jlink command
+
+`jlink --compress=2 -G --output target/jib-extra/jre --add-modules java.base,java.logging,java.xml,jdk.unsupported,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument`
